# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.
target_os="win"
target_cpu="x64"
is_official_build=true
is_static_skiasharp=true
skia_enable_fontmgr_win_gdi=false
skia_use_dng_sdk=true
skia_use_icu=false
skia_use_piex=true
skia_use_sfntly=false
skia_use_system_expat=false
skia_use_system_libjpeg_turbo=false
skia_use_system_libpng=false
skia_use_system_libwebp=false
skia_use_system_zlib=false
skia_use_vulkan=true
skia_use_angle=true
skia_enable_skottie=true
skia_enable_gpu=true
extra_cflags=[ "-DSKIA_C_DLL", "/MT", "/EHsc", "-D_HAS_AUTO_PTR_ETC=1" ]