# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.
target_os = "win"
target_cpu = "x64"

is_official_build = true
is_static_skiasharp = true

skia_enable_tools = false
skia_enable_fontmgr_win_gdi = false
skia_enable_pdf = false
skia_enable_skottie = false

skia_use_angle = false
skia_use_dng_sdk = false
skia_use_icu = false
skia_use_piex = false
skia_use_sfntly = false
skia_use_system_expat = false
skia_use_system_libjpeg_turbo = false
skia_use_system_libpng = false
skia_use_system_libwebp = false
skia_use_system_zlib = false
skia_use_vma = false # VULKAN VMA
skia_use_vulkan = false
skia_use_xps = false

win_sdk_version = "10.0.26100.0"

clang_win =
    "C:/Program Files/LLVM"

clang_win_version = 21 # clang-cl only has major version number

extra_cflags = [
  "/MT",
  "/EHsc",
  "-D_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS",
]
extra_ldflags = [
  "/DEBUG:FULL",
  "/DEBUGTYPE:CV,FIXUP",
  "/OPT:REF",
  "/OPT:ICF",
]
